test/pending/continuations-neg/t3628.check
ending/continuations-neg/t3628.scala:4: error: not found: type Actor
  val impl: Actor = actor {
            ^
